# nix

./: .gitignore  README.md
flakes/doris/: flake.nix
flakes/kafka/: devbox.json  produce-dummy.sh
flakes/kafka/conf/: config.yaml  log4j.properties
flakes/kafka/kafka-flink-job/: dependency-reduced-pom.xml  pom.xml
flakes/kafka/kafka-flink-job-a/: pom.xml
flakes/kafka/kafka-flink-job-a/src/main/java/com/kafka/flink/: KafkaJsonToRowDataMapper.java
flakes/kafka/kafka-flink-job-b/: dependency-reduced-pom.xml  pom.xml
flakes/kafka/kafka-flink-job-b/src/main/java/com/kafka/flink/: KafkaFlink.java
flakes/kafka/kafka-flink-job-b/src/main/java/com/kafka/flink/utils/: Utils.java
flakes/kafka/kafka-flink-job-b/src/test/java/com/kafka/flink/: AppTest.java
flakes/kafka/kafka-flink-job/src/main/java/com/kafka/flink/: KafkaFlink.java
flakes/pypy/: flink_insert.py  main.py  prefect-job-flink.py  prefect-job-spark.py  prefect-job.py  pyproject.toml  redis_lock.py  redis_lock_v2.py  spark-insert-2.py  spark-insert.py  test_redis_queue_lock.py
flakes/redis/: dump.rdb  flake.nix
