[project]
name = "pypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "apache-flink>=1.20.1",
    "prefect>=3.2.9",
    "psutil>=7.0.0",
    "py4j>=0.10.9.7",
    "pyflink>=1.0",
    "pyspark>=3.5.5",
    "redis>=5.2.1",
    "setuptools>=76.0.0",
]
